--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-28  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2002-02-28  Hasbullah Bin Pit <sebol@ikhlas.com>
 
 	* ms.po: Updated Malay Translation.
