--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-01  Tõivo Leedjärv  <leedjarv@interest.ee>
+
+	* et.po: Updated Estonian translation.
+
 2002-02-28  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
