--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-01  Christian Meyer  <chrisime@gnome.org>
+
+	* de.po: Updated German translation.
+
 2002-03-01  Tõivo Leedjärv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
