--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-01  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2002-03-01  Christian Meyer  <chrisime@gnome.org>
 
 	* de.po: Updated German translation.
