--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-01  Simos Xenitellis  <simos@hellug.gr>
+
+	* el.po: Updated Greek translation.
+
 2002-03-01  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* pl.po: Updated Polish translation by
