--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-02  Ole Laursen  <olau@hardworking.dk>
+
+	* POTFILES.in: Removed non-existing file.
+
+	* da.po: Updated Danish translation.
+
 2002-03-01  Simos Xenitellis  <simos@hellug.gr>
 
 	* el.po: Updated Greek translation.
