--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-03  Ole Laursen  <olau@hardworking.dk>
+
+	* POTFILES.in: Renamed the *.in files which seem to have been
+	renamed in the source.
+
 2002-03-02  Ole Laursen  <olau@hardworking.dk>
 
 	* POTFILES.in: Removed non-existing file.
