--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-03  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* no.po: Updated Norwegian (bokmål) translation.
+	
 2002-03-03  Ole Laursen  <olau@hardworking.dk>
 
 	* POTFILES.in: Renamed the *.in files which seem to have been
