--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-04  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* src/yelp-window.c: add a comment for translators
+
 2002-03-03  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-man.c:
