updated Turkish file

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,7 @@
 2002-03-04  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* wa.po: Updated Walloon file
+	* tr.po: Updated Turkish file
 
 2002-03-03  Kjartan Maraas  <kmaraas@gnome.org>
 
