--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-05  Wang Jian  <lark@linux.net.cn>
+
+	* configure.in: Added "zh_CN" to ALL_LINGUAS.
+
 2002-03-04  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* src/yelp-window.c: add a comment for translators
