--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-03-04  Mikael Hallendal  <micke@codefactory.se>
 
+	* Release 0.3
+
 	* configure.in: 
 	- updated version to 0.3
 	- updated deps of libgnome and gtkhtml2
