--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-03-04  Mikael Hallendal  <micke@codefactory.se>
 
+	* configure.in: bumped version to 0.3.99
+
 	* Release 0.3
 
 	* configure.in: 
