--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-04  Christian Meyer  <chrisime@gnome.org>
+
+	* de.po: Updated German translation.
+
 2002-03-05  Wang Jian  <lark@linux.net.cn>
 
 	* zh_CN.po: Added Simplified Chinese translation by
