--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-06  Germán Poo-Caamaño <gpoo@ubiobio.cl>
+
+	* es.po: Updated spanish translation from
+		Juan Manuel García Molina <juanma_gm@wanadoo.es>
+
 2002-03-04  Christian Meyer  <chrisime@gnome.org>
 
 	* de.po: Updated German translation.
