nl.po Dutch translation updated (Tino Meinen)
2002-03-06 Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
* nl.po Dutch translation updated (Tino Meinen)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-06  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
+
+	* nl.po: Updated dutch translation (Tino Meinen)
+
 2002-03-06  Germán Poo-Caamaño <gpoo@ubiobio.cl>
 
 	* es.po: Updated spanish translation from
