--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-13  Valek Filippov  <frob@df.ru>
+
+	* ru.po: added russian translation from Igor Androsov <blace@mail.ru>.
+
 2002-03-07  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
