Updated Bulgarian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-13  Alexander Shopov <al_shopov@yahoo.com>
+
+	* bg.po: Updated Bulgarian translation
+
 2002-03-13  Valek Filippov  <frob@df.ru>
 
 	* ru.po: added russian translation from Igor Androsov <blace@mail.ru>.
