--- a/po/bg.po
+++ b/po/bg.po
@@ -5,15 +5,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.1\n"
-"POT-Creation-Date: 2002-01-20 09:35-0500\n"
-"PO-Revision-Date: 2002-01-23 22:52+0200\n"
-"Last-Translator: Alexander Shopov <al_shopov@web.bg>\n"
-"Language-Team: Bulgarian <dict@linux.zonebg.com>\n"
+"POT-Creation-Date: 2002-03-04 16:32-0500\n"
+"PO-Revision-Date: 2002-03-06 13:10EET\n"
+"Last-Translator: Alexander Shopov <al_shopov@yahoo.com>\n"
+"Language-Team: Bulgarian <dict@linuz.zonebg.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.9.5\n"
 
-#: src/GNOME_Yelp.server.in.h:1 yelp.desktop.in.h:2
+#: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
 msgstr "Йелп"
 
@@ -21,156 +22,244 @@ msgstr "Йелп"
 msgid "Yelp Factory"
 msgstr "Фабрика на Йелп"
 
-#: src/yelp-info.c:98
+#: src/yelp-info.c:126
 msgid "info"
 msgstr "Инфо ръководства"
 
-#: src/yelp-main.c:77
+#: src/yelp-main.c:91
 #, c-format
 msgid "Could not activate Yelp: '%s'"
 msgstr "Не можах да активирам Йелп: '%s'"
 
-#: src/yelp-main.c:97
+#: src/yelp-main.c:110
 msgid "Could not open new window."
 msgstr "Не можах да отворя нов прозорец."
 
-#: src/yelp-man.c:269 src/yelp-man.c:290 src/yelp-man.c:326 src/yelp-man.c:358
-#: src/yelp-man.c:374 src/yelp-man.c:385
+#: src/yelp-man.c:301 src/yelp-man.c:322 src/yelp-man.c:358 src/yelp-man.c:390
+#: src/yelp-man.c:406 src/yelp-man.c:417
 msgid "X11"
 msgstr "X11"
 
-#: src/yelp-man.c:274 src/yelp-man.c:305 src/yelp-man.c:363 src/yelp-man.c:390
+#: src/yelp-man.c:306 src/yelp-man.c:337 src/yelp-man.c:395 src/yelp-man.c:422
 msgid "OpenSSL"
 msgstr "OpenSSL"
 
-#: src/yelp-man.c:279
+#: src/yelp-man.c:311
 msgid "Termcap"
 msgstr "Termcap"
 
-#: src/yelp-man.c:295
+#: src/yelp-man.c:327
 msgid "Perl"
 msgstr "Perl"
 
-#: src/yelp-man.c:300
+#: src/yelp-man.c:332
 msgid "Qt"
 msgstr "Qt"
 
-#: src/yelp-man.c:310
+#: src/yelp-man.c:342
 msgid "TIFF"
 msgstr "TIFF"
 
-#: src/yelp-man.c:315
+#: src/yelp-man.c:347
 msgid "PThreads"
 msgstr "PThreads"
 
-#: src/yelp-man.c:337
+#: src/yelp-man.c:369
 msgid "System Calls"
 msgstr "Системни извиквания"
 
-#: src/yelp-man.c:342
+#: src/yelp-man.c:374
 msgid "Library Functions"
 msgstr "Библиотечни функции"
 
-#: src/yelp-man.c:347
+#: src/yelp-man.c:379
 msgid "Kernel Routines"
 msgstr "Функции на ядрото"
 
-#: src/yelp-man.c:402
+#: src/yelp-man.c:434
 msgid "Applications"
 msgstr "Приложения"
 
-#: src/yelp-man.c:407
+#: src/yelp-man.c:439
 msgid "Development"
 msgstr "Разработка"
 
-#: src/yelp-man.c:412
+#: src/yelp-man.c:444
 msgid "Hardware Devices"
 msgstr "Хардуерни устройства"
 
-#: src/yelp-man.c:417
+#: src/yelp-man.c:449
 msgid "Configuration Files"
 msgstr "Конфигурационни файлове"
 
-#: src/yelp-man.c:422
+#: src/yelp-man.c:454
 msgid "Games"
 msgstr "Игри"
 
-#: src/yelp-man.c:427
+#: src/yelp-man.c:459
 msgid "Overviews"
 msgstr "Прегледи"
 
-#: src/yelp-man.c:432
+#: src/yelp-man.c:464
 msgid "System Administration"
 msgstr "Системна администрация"
 
-#: src/yelp-man.c:443
+#: src/yelp-man.c:475
 msgid "man"
 msgstr "Ръководства"
 
-#: src/yelp-view-content.c:159 src/yelp-view-index.c:172
+#: src/yelp-view-content.c:197 src/yelp-view-index.c:355
 msgid "Section"
 msgstr "Секция"
 
-#: src/yelp-window.c:108
+#: src/yelp-view-index.c:325
+msgid "Search for:"
+msgstr "Търси:"
+
+#: src/yelp-view-toc.c:271
+msgid "Other Documents"
+msgstr "Други системи за документация"
+
+#: src/yelp-view-toc.c:272 src/yelp-view-toc.c:502
+msgid "Manual pages"
+msgstr "Страници на ръководствата"
+
+#: src/yelp-view-toc.c:273 src/yelp-view-toc.c:579 src/yelp-view-toc.c:598
+msgid "Info pages"
+msgstr "Инфо страници"
+
+#: src/yelp-view-toc.c:274
+msgid "Installed documents"
+msgstr "Инсталирани документи"
+
+#: src/yelp-view-toc.c:288
+msgid "Start page"
+msgstr "Начална страница"
+
+#: src/yelp-view-toc.c:532
+msgid "Manual Pages"
+msgstr "Страници на ръководствата"
+
+#: src/yelp-view-toc.c:700
+msgid "Scrollkeeper docs for category"
+msgstr "Документи на Скролкийпър за категорията"
+
+#: src/yelp-window.c:138
 msgid "/_File"
 msgstr "/_Файл"
 
-#: src/yelp-window.c:109
+#: src/yelp-window.c:139
 msgid "/File/_New window"
 msgstr "/Файл/_Нов прозорец"
 
-#: src/yelp-window.c:110
+#: src/yelp-window.c:140
 msgid "/File/_Close window"
 msgstr "/Файл/Затвори прозоре_ц"
 
-#: src/yelp-window.c:111
-msgid "/File/E_xit"
+#: src/yelp-window.c:141
+msgid "/File/_Quit"
 msgstr "/Файл/Из_ход"
 
-#: src/yelp-window.c:112
+#: src/yelp-window.c:142
+msgid "/_Go"
+msgstr "/_Иди"
+
+#: src/yelp-window.c:143
+msgid "/Go/_Back"
+msgstr "/Иди/_Назад"
+
+#: src/yelp-window.c:144
+msgid "/Go/_Forward"
+msgstr "/Иди/Н_апред"
+
+#: src/yelp-window.c:145
+msgid "/Go/_Home"
+msgstr "/Иди/_В началото"
+
+#: src/yelp-window.c:146
+msgid "/Go/_Index"
+msgstr "/Иди/_Индекс"
+
+#: src/yelp-window.c:147
 msgid "/_Help"
 msgstr "/_Помощ"
 
-#: src/yelp-window.c:113
+#: src/yelp-window.c:148
 msgid "/Help/_About"
 msgstr "/Помощ/Информ_ация"
 
-#: src/yelp-window.c:160
+#: src/yelp-window.c:207
 msgid "Help Browser"
 msgstr "Навигатор на помощта"
 
-#: src/yelp-window.c:376
+#. Note to translators: put here your name (and address) so it
+#. * will shop up in the "about" box
+#: src/yelp-window.c:539
+msgid "translator_credits"
+msgstr "Александър Шопов"
+
+#: src/yelp-window.c:543
 msgid "Help Browser for GNOME 2.0"
-msgstr "Навигатора на помощта за ГНОМ 2.0"
+msgstr "Навигаторът на помощта за ГНОМ 2.0"
 
-#: src/yelp-window.c:400
-msgid "Go back in the history list"
-msgstr "Върни се назад в историята"
+#: src/yelp-window.c:570
+msgid "Back"
+msgstr "Назад"
 
-#: src/yelp-window.c:415
-msgid "Go forth in the history list"
-msgstr "Иди напред в историята"
+#: src/yelp-window.c:571
+msgid "Show previous page in history"
+msgstr "Покажи предната страница в историята"
 
-#: src/yelp-window.c:430
-msgid "Overview of contents"
-msgstr "Преглед на съдържанието"
+#: src/yelp-window.c:582
+msgid "Forward"
+msgstr "Напред"
 
-#: src/yelp-window.c:441
+#: src/yelp-window.c:583
+msgid "Show next page in history"
+msgstr "Покажи следващата страница в историята"
+
+#: src/yelp-window.c:596
+msgid "Home"
+msgstr "Вкъщи"
+
+#: src/yelp-window.c:597
+msgid "Go to home view"
+msgstr "Иди в началото"
+
+#: src/yelp-window.c:607
+msgid "Index"
+msgstr "Индекс"
+
+#: src/yelp-window.c:608
 msgid "Search in the index"
 msgstr "Търси в индекса"
 
-#: src/yelp-window.c:453
+#: yelp.desktop.in.h:1
+msgid "Get help with GNOME"
+msgstr "Помощ с ГНОМ"
+
+#: yelp.desktop.in.h:2
+msgid "Help"
+msgstr "/_Помощ"
+
+msgid "Go back in the history list"
+msgstr "Върни се назад в историята"
+
+msgid "Go forth in the history list"
+msgstr "Иди напред в историята"
+
+msgid "Overview of contents"
+msgstr "Преглед на съдържанието"
+
 msgid "Search for a phrase in the document"
 msgstr "Търси фраза в документа"
 
-#: src/yelp-window.c:459
 msgid "Help on "
 msgstr "Включи помощта"
 
-#: src/yelp-window.c:464
 msgid "Enter phrase to search for in all documents"
 msgstr "Въведете фраза за търсене във всички документи"
 
-#: yelp.desktop.in.h:1
 msgid "GNOME Helpbrowser"
 msgstr "Навигатор на помощта на ГНОМ"
+
