--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-17  Tõivo Leedjärv <toivo@linux.ee>
+
+	* et.po: Updated Estonian translation.
+
 2002-03-13  Alexander Shopov <al_shopov@yahoo.com>
 
 	* bg.po: Updated Bulgarian translation
