--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-17  Szabolcs Ban <shooby@gnome.hu>
+
+	* hu.po: Updated Hungarian translation
+
 2002-03-17  Tõivo Leedjärv <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
